--- a/HOME/Home.html
+++ b/HOME/Home.html
@@ -28,8 +28,8 @@
 
     <div>
 
-        <img id="teacher" src="teacher.jpg" alt="" style="width: 20%;height: 80%;">
-        <img id="student" src="student.png" alt="" style="width: 20%;height: 80%;">
+        <img id="teacher" src="teacher.jpg" alt="" style="width: 25vw;height: auto;">
+        <img id="student" src="student.png" alt="" style="width: 25vw;height: auto;">
 
         <h3 id="para">“To acquire knowledge, one must study;
             but to acquire wisdom, one must observe.”</h3>
