--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -42,7 +42,7 @@
             <br><br>
             <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae provident adipisci itaque quas,
                 eveniet reiciendis dolorum modi amet nobis fuga numquam repellat reprehenderit blanditiis officia! Ea
-                neque omnis sequi quas!</p>
+                neque omnis sequi quas! lo</p>
         </div>
 
 
